tests/src/frontend/syntax/invalid/lvalue_in_expression.sk
fun a(): void {
  x = y.!x
}
